src/test/resources/purescript_examples/failing/LetPatterns1.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith ErrorParsingModule\n')
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(ModuleName)
        PSASTWrapperElement(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(NamedBinder)
        <empty list>
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(ImportModuleName)
          PSASTWrapperElement(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n\n-- wrong binders for function, the first one should be VarBinder\n')
      PSASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('x')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)('\n  ')
        PSASTWrapperElement(Value)
          PSASTWrapperElement(PrefixValue)
            PSASTWrapperElement(Let)
              PsiElement(let)('let')
              PsiElement(whitespace)(' ')
              PSASTWrapperElement(ValueDeclaration)
                PsiElement(()('(')
                PSASTWrapperElement(Constructor)
                  PsiElement(proper name)('X')
                  PsiElement(whitespace)(' ')
                PsiElement(identifier)('a')
                PsiElement(whitespace)(' ')
                PsiElement(identifier)('b')
                PSASTWrapperElement(NamedBinder)
                  <empty list>
                PsiElement())(')')
                PsiElement(whitespace)(' ')
                PSASTWrapperElement(Binder)
                  PSASTWrapperElement(VarBinder)
                    PsiElement(identifier)('x')
                    PsiElement(whitespace)(' ')
                PSASTWrapperElement(Binder)
                  PSASTWrapperElement(VarBinder)
                    PsiElement(identifier)('y')
                    PsiElement(whitespace)(' ')
                PsiElement(=)('=')
                PsiElement(whitespace)(' ')
                PSASTWrapperElement(Value)
                  PSASTWrapperElement(PrefixValue)
                    PSASTWrapperElement(Var)
                      PSASTWrapperElement(Qualified)
                        PsiElement(identifier)('hoge')
                        PsiElement(whitespace)('\n  ')
              PsiElement(in)('in')
              PsiElement(whitespace)('\n   ')
              PSASTWrapperElement(Value)
                PSASTWrapperElement(PrefixValue)
                  PSASTWrapperElement(Var)
                    PSASTWrapperElement(Qualified)
                      PsiElement(identifier)('a')
                      PsiElement(whitespace)('\n')
